contains 3 java new pakages

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/com/sybtax/class04/DononerHomeWork.java=UTF-8
 encoding//src/com/sybtax/class04/EvenOrOddHomwWork.java=UTF-8
+encoding//src/com/syntax/class12/AssignedTask.java=UTF-8
+encoding//src/com/sysntax/class13/Task2.java=UTF-8
